--- a/css/mobile.css
+++ b/css/mobile.css
@@ -34,7 +34,7 @@
   }
   .mobile-nav  {
     list-style-type: none; /*to remove bullets*/
-    margin-top:2rem;
+    margin-top:-20px;
   }
   li.plank{
     line-height:60px;
